--- a/sls-beta/products.html
+++ b/sls-beta/products.html
@@ -84,7 +84,7 @@ import {Blue70Button} from "./components/blue70Button.js";
  new Text(this.obj.name).set({
                 color: "black",
                 weight: "bold",
-                size: "S5"
+                exact: "1.6rem"
               }),
               new Text(this.obj.price).set({
                 weight: "bold",
