--- a/sls-beta/products.html
+++ b/sls-beta/products.html
@@ -56,7 +56,7 @@ import {Blue70Button} from "./components/blue70Button.js";
             new Image().set({
               type: "img",
               width: "300px",
-              url: this.obj.url,
+              url: this.obj.images[0],
               vtn: this.obj.name
             }),
             new Wrapper().set({
