--- a/sls-beta/products.html
+++ b/sls-beta/products.html
@@ -48,6 +48,15 @@ import {Blue70Button} from "./components/blue70Button.js";
       constructor(obj){
         super();
         this.obj = obj;
+
+        if (obj.images === undefined){
+          alert(obj.name);
+          
+        } else {
+          if (obj.images[0] === undefined){
+              alert(obj.name);
+          }
+        }
       }
 
       render(){
@@ -56,6 +65,7 @@ import {Blue70Button} from "./components/blue70Button.js";
             new Image().set({
               type: "img",
               width: "300px",
+              isFull: true,
               url: this.obj.images[0],
               vtn: this.obj.name
             }),
