--- a/spatial-gravity-terms.html
+++ b/spatial-gravity-terms.html
@@ -1,5 +1,99 @@
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Spatial Gravity Privacy Policy</title>
+</head>
 
-<h1>Spatial Gravity terms</h1>
-<h2>The product is as-is.<h2>
-<h2>The product requires camera for XR features like planet showing</h2>
+<style>
+    * {
+        font-family: Arial, Helvetica, sans-serif;
+        margin: 0;
+        padding: 0;
+    }
+
+    h1 {
+        margin-top: 3rem;
+    }
+
+    #date {
+          margin-top: 0.5rem;
+          color: gray;
+    }
+
+    h1, p {
+        max-width: 800px;
+        margin-left: 1rem;
+      
+    }
+
+    h2 {
+        margin-top: 1.2rem;
+        margin-bottom: .2rem;
+        color: #3498db;
+          margin-left: 1rem;
+    }
+
+    footer {
+        margin-left: 0.5rem;
+        margin-top: 1rem;
+        margin-bottom: 3rem;
+    }
+</style>
+<body>
+  <h1>Privacy Policy for Spatial Gravity</h1>
+  <p id="date">Last updated: October 19, 2025</p>
+
+  <h2>Overview</h2>
+  <p>
+    Spatial Gravity is an augmented reality (AR) experience designed for Android XR headsets.
+    The app allows users to view virtual planets in their physical space using camera input.
+  </p>
+
+  <h2>Data Collection and Use</h2>
+  <p>
+    Spatial Gravity does <strong>not collect, store, or share</strong> any personal data from users.
+    The app only uses the device camera and spatial sensors to enable AR functionality — specifically to display virtual planets in real-world environments.
+  </p>
+
+  <h2>Camera Access</h2>
+  <p>
+    The camera is used exclusively for rendering virtual objects.
+    Camera data is processed locally on your device and is <strong>never transmitted</strong> or stored on external servers.
+  </p>
+
+  <h2>Third-Party Services</h2>
+  <p>
+    Spatial Gravity does not integrate with third-party analytics, advertising, or data collection services.
+  </p>
+
+  <h2>Data Security</h2>
+  <p>
+    Since no personal data is collected or transmitted, there is no risk of data exposure.
+    All processing occurs locally on the user’s XR device.
+  </p>
+
+  <h2>Children’s Privacy</h2>
+  <p>
+    Spatial Gravity is not specifically directed toward children, but it can be used by all audiences.
+    No personal data from children or any users is collected.
+  </p>
+
+  <h2>Changes to This Policy</h2>
+  <p>
+    This privacy policy may be updated from time to time. Any changes will be reflected on this page with a new "Last updated" date.
+  </p>
+
+  <h2>Contact</h2>
+  <p>
+    If you have questions about this policy or the app, you can contact the developer at:
+    <a href="mailto:filipvabrousek1@gmail.com">filipvabrousek1@gmail.com</a>
+    Send an e-mail with the subject "Suggestion".
+  </p>
+
+  <footer>
+    <p>&copy; 2025 Spatial Gravity</p>
+  </footer>
+</body>
+</html>
