--- a/index.html
+++ b/index.html
@@ -1100,7 +1100,7 @@ window.addEventListener('wheel', (event) => {
  /*11:38:17 CTRL + click*/
 </style>
 
-<iframe width="80%" height="400px" src="https://www.youtube.com/embed/R3pzSNK-gSo?si=sWjv1qj1RQDkwVaD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="80%" height="600px" src="https://www.youtube.com/embed/R3pzSNK-gSo?si=sWjv1qj1RQDkwVaD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 <!---------------------watchOS 10----------------->
 <h2 class="graphicTitle hidden firstTitle">watchOS 26 Concept</h2>
@@ -1125,7 +1125,7 @@ window.addEventListener('wheel', (event) => {
   }
 </style>
 
-<iframe width="80%" height="400px"  src="https://www.youtube.com/embed/jaUou0GYEnc?si=xCqGBbgaPd3h9wLQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="80%" height="600px"  src="https://www.youtube.com/embed/jaUou0GYEnc?si=xCqGBbgaPd3h9wLQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
  
 
 <h2 class="graphicTitle hidden firstTitle">Rise of particles</h2>
@@ -1151,7 +1151,7 @@ window.addEventListener('wheel', (event) => {
   }
 </style>
 
-<iframe width="80%" height="400px" src="https://www.youtube.com/embed/Wl8M3Ei41eE?si=l2r9MnIzOJkZ-lKz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="80%" height="600px" src="https://www.youtube.com/embed/Wl8M3Ei41eE?si=l2r9MnIzOJkZ-lKz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
 <h2 class="graphicTitle hidden">iPhone 15 Pro concept</h2>
@@ -1202,10 +1202,19 @@ window.addEventListener('wheel', (event) => {
   <h3 class="graphicTitle fade-in">...and make things for the web.</h3>
 
     <section class="js-app hidden">
-  <h3 class="app-title app-title-web">Nodality JS</h3>
+  <h3 class="app-title app-title-web">NodalityJS</h3>
   <p class="desc">Innovative JS library using arrays of elements and nodes.</p>
   <a class="tar tar-small" target="_blank" href="https://nodalityJS.github.io">Docs</a>
   </section>
+
+
+  <section class="js-app hidden">
+  <h3 class="app-title app-title-web">blue70.cz</h3>
+  <p class="desc">Website of Czech Blue70 wetsuit and swimsuit e-shop</p>
+  <p class="desc">Built using NodalityJS</p>
+  <a class="tar tar-small" target="_blank" href="https://blue70.cz">More</a>
+  </section>
+
 
 
   <section class="js-app hidden">
