--- a/index.html
+++ b/index.html
@@ -219,9 +219,28 @@
     </canvas>
     </div>
 
-<!---
+
     <script type="module" src="js/gla.js"></script>
---->
+
+<video
+  id="blob-video"
+  playsinline
+  autoplay
+  loop
+  muted
+  preload="auto"
+  poster="blob-fallback.jpg"
+  src="img/blob-loop.mp4">
+</video>
+
+<style>
+  video {
+    border: 3px solid green;
+    position: absolute;
+    top: 0;
+    z-index: -1;
+  }
+</style>
 
   <div class="blob upperLeftBlob indexBlob animatable">
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500" width="100%" id="blobSvg">                        <defs>                        <linearGradient id="gradient" x1="0%" y1="0%" x2="0%" y2="100%">                            <stop offset="0%" style="stop-color: rgb(98, 239, 249); --darkreader-inline-stopcolor:#f0c895;" data-darkreader-inline-stopcolor=""></stop>                            <stop offset="100%" style="stop-color: rgb(47, 132, 244); --darkreader-inline-stopcolor:#f562a1;" data-darkreader-inline-stopcolor=""></stop>                        </linearGradient>                        </defs>                        <path id="blob" fill="url(#gradient)">               
