--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
   muted
   preload="auto"
   poster="blob-fallback.jpg"
-  src="img/blob-loop.mp4">
+  src="img/blob-loop-safe.mp4">
 </video>
 
 <style>
