--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     <script type="module">
   const isMobile = /Mobi|Android|iPhone|iPad/i.test(navigator.userAgent);
   if (isMobile) {
-    document.querySelector('#blob-video').style.display = 'block';
+   // document.querySelector('#blob-video').style.display = 'block';
     document.querySelector('#gla').remove();
   } else {
     import('js/gla.js');  // desktop-only module
