--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
    // document.querySelector('#blob-video').style.display = 'block';
     document.querySelector('#gla').remove();
   } else {
+    alert(navigator.userAgent)
     import('js/gla.js');  // desktop-only module
   }
 </script>
