--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     let media = window.matchMedia("(min-device-width: 430px)");
     if (media.matches) {
       alert(navigator.userAgent)
- import('js/gla.js');  // desktop-only module
+ import('./js/gla.js');  // desktop-only module
     }
    
   }
