--- a/index.html
+++ b/index.html
@@ -579,6 +579,7 @@ M440.5,320.5Q418,391,355.5,442.5Q293,494,226,450.5Q159,407,99,367Q39,327,31.5,24
         >
         </screen-showcase-new>
 
+        <!--
           <screen-showcase-new
             app-for="Relays" 
             app-for-limit="1000-2500" 
@@ -594,6 +595,7 @@ M440.5,320.5Q418,391,355.5,442.5Q293,494,226,450.5Q159,407,99,367Q39,327,31.5,24
             first-url="img/spatial-network-3-2025.png"
         >
         </screen-showcase-new>
+        --->
 
          
 </div>
@@ -653,13 +655,14 @@ app-minus-constant="0"
         >
         </screen-showcase-new>
 
-          <screen-showcase-new
+        <!--- <screen-showcase-new
             app-for="Relays" 
             app-for-limit="1000-2500" 
             app-minus-constant="1000"
            first-url="img/relays-2025-lg.jpeg"
         >
         </screen-showcase-new>
+        --->
 
          
 </div>
@@ -706,7 +709,7 @@ app-minus-constant="5400"
         >
         </screen-showcase-new>
 
-          <screen-showcase-new
+       <!---   <screen-showcase-new
             app-for="Eveny" 
             app-for-limit="1000-2500" 
             app-minus-constant="1000"
@@ -721,6 +724,8 @@ app-minus-constant="5400"
             first-url="img/eveny-all.png"
         >
         </screen-showcase-new>
+
+        ---->
 </div>
 
 
@@ -784,12 +789,7 @@ first-url="img/runny-2025.png"
 ></screen-showcase-new> <!--Keep pair-->
 
 
-<screen-showcase-new 
-app-for="Runny"
-app-for-limit="7300-7600"
-app-minus-constant="7300"
-first-url="img/runny-watch-2025.png"
-></screen-showcase-new> <!--Keep pair-->
+
 </div>
 
 <div class="pol l">
@@ -826,12 +826,6 @@ app-minus-constant="7300"
 first-url="img/spatial-gravity-1.webp"
 ></screen-showcase-new> <!--Keep pair-->
 
-<screen-showcase-new 
-app-for="spatial-gravity"
-app-for-limit="7800-8100"
-app-minus-constant="7300"
-first-url="img/spatial-gravity-2.webp"
-></screen-showcase-new> <!--Keep pair-->
 </div>
 
 <div class="pol l">
