--- a/index.html
+++ b/index.html
@@ -554,6 +554,8 @@ M440.5,320.5Q418,391,355.5,442.5Q293,494,226,450.5Q159,407,99,367Q39,327,31.5,24
 
 <section class="apps">
 
+<div class="spatial-network-section">
+
 
   <app-showcase 
   app-title="SPATIAL-NETWORK"
@@ -615,7 +617,7 @@ M440.5,320.5Q418,391,355.5,442.5Q293,494,226,450.5Q159,407,99,367Q39,327,31.5,24
   
   
  
-  
+  </div>
 
 
 
@@ -629,7 +631,7 @@ M440.5,320.5Q418,391,355.5,442.5Q293,494,226,450.5Q159,407,99,367Q39,327,31.5,24
 
 <section class="apps">
 <!---------------------------------RELAYS (2)------------------------------------->
-
+<div class="relays-section">
 <!--8:34:48 0.5s cursor interval? 20/10/24-->
 <app-showcase 
 app-title="RELAYS"
@@ -677,7 +679,7 @@ app-minus-constant="0"
             <img class="appstore hidden" src="https://filipvabrousek.github.io/images/playStore.png" /></a>
       </div>
     </div>
-
+</div>
 
 </section>
 
@@ -687,6 +689,8 @@ app-minus-constant="0"
 
 <!---APP ANIM RANGE decides image blob-->
 <!---FIRE AT RANGE decides letters-->
+
+<div class="eveny-section">
 <app-showcase
 app-title="EVENY"
 app-desc=""
@@ -748,7 +752,7 @@ app-minus-constant="5400"
 </div>
 
 
-
+</div>
 
 
 </section>
@@ -768,6 +772,8 @@ app-anim-range="7200-0"
 fire-at-range="7100-0"
 app-minus-constant="7100"
 ></app-showcase>-->
+<div class="runny-section">
+
 
 <app-showcase
 app-title="RUNNY"
@@ -798,15 +804,19 @@ first-url="img/runny-2025.png"
         <a class="hidden" href="https://apps.apple.com/us/app/runny/id1460395908">
             <img class="appstore hidden" src="https://filipvabrousek.github.io/images/download.png" /></a>
     </div>
+
+    </div>
 </div>
 
+</section>
 
 
 
 
 
+<section class="apps">
 
-
+  <div class="spatial-gravity-section">
 <app-showcase
 app-title="SPATIAL-GRAVITY"
 app-desc=""
@@ -836,9 +846,9 @@ Experience the gravity increase on Jupiter and the lightness on Mercury.</p>
             <img class="appstore hidden" src="https://filipvabrousek.github.io/images/playStore.png" /></a>
     </div>
 </div>
+</div>
 
 <!---OM--->
-
   </section>
 
 
