--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     <link rel="stylesheet" href="style/index-style.css">
     <link rel="stylesheet" href="style/navStyle.css">
 
+
+
+    <script>
+window.location.href = "https://www.filipvabrousek.com";
+    </script>
+
     <!--<link rel="stylesheet" href="style/transition.css">--->
     <!--<link rel="stylesheet" href="style/about-style.css">-->
     <link rel="stylesheet" href="style/anim.css">
